force-app/main/default/objects/LiveAgent__c/LiveAgent__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>LiveAgent</label>
</CustomObject>