force-app/main/default/objects/LiveAgent__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <length>50</length>
    <type>Text</type>
</CustomField>