force-app/main/default/objects/LiveAgent__c/fields/BrandImage__c.field-meta.xml
<CustomField>
    <fullName>BrandImage__c</fullName>
    <label>BrandImage</label>
    <length>80</length>
    <type>Text</type>
</CustomField>