force-app/main/default/objects/LiveAgent__c/fields/Problem__c.field-meta.xml
<CustomField>
    <fullName>Problem__c</fullName>
    <label>Problem</label>
    <type>TextArea</type>
</CustomField>